--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <app-container></app-container>
-    <script src="./app/index.js" type="modules"></script>
+    <script src="./app/index.js" type="module"></script>
 </body>
 </html>
